--- a/index.ipynb
+++ b/index.ipynb
@@ -163,8 +163,7 @@
     }
    ],
    "source": [
-    "name = \"art vandelay\" # 'Art Vandelay'\n",
-    "name.title ()"
+    "\"art vandelay\" # 'Art Vandelay'\n"
    ]
   },
   {
