--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +157,13 @@
        "'Art Vandelay'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'\n"
+    "\"art vandelay\".title () # 'Art Vandelay'\n"
    ]
   },
   {
