Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,7 @@
     }
    ],
    "source": [
-    "name = \"Ceo\" # 'CEO'\n",
+    "\"Ceo\".upper () # 'CEO'\n",
     "name.upper ()"
    ]
   },
