Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -184,14 +184,13 @@
        "'CEO'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Ceo\".upper () # 'CEO'\n",
-    "name.upper ()"
+    "\"Ceo\".upper () # 'CEO'"
    ]
   },
   {
