Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
     }
    ],
    "source": [
-    "name = \"art.vandelay@vandelay.co\" # False\n",
+    "\"art.vandelay@vandelay.co\".endswith (\".co\") # False\n",
     "name.endswith (\".com\")"
    ]
   },
