Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,8 +217,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith (\".co\") # False\n",
-    "name.endswith (\".com\")"
+    "\"art.vandelay@vandelay.co\".endswith (\".com\") # False"
    ]
   },
   {
